--- a/something.css
+++ b/something.css
@@ -3,9 +3,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 150%;
+    font-size large;
     color: black;
-    height:100px
+    height:50px
   }
   .left {
     position: absolute;
