--- a/something.css
+++ b/something.css
@@ -9,8 +9,8 @@
   }
 .chonk {
     position: absolute;
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
   }
   .left {
     position: absolute;
